QND41K8S/qnd41app100/backups/ingress-qnd41-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qnd41-stg-app-ingress
  namespace: qnd41-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    kubernetes.io/ingress.class: "nginx" 
spec:
  ingressClassName: nginx
  rules:
  - host: app.smartquail.io
    http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: qnd41-pro
              port:
                number: 80
  defaultBackend:
    service:
      name: qnd41-pro
      port:
        number: 80
